--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-Packages
-.build
 .DS_Store
+DerivedData
+Build
+# Xcode ignores
+*.xcbkptlist
+*.xcuserstate
+*.xccheckout
+xcuserdata
 Carthage
+Cartfile.resolved
